--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>training-ecommerce-project</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"
+    class="bg-gray-900 text-white min-h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
